@@ -1,5 +1,7 @@
 == unreleased changes
 
+* Added support for multipart forms that start with a new record.
+
 == 0.0.13
 
 * Major documentation updates
